Update HomeController.java